--- a/templates/delete.html
+++ b/templates/delete.html
@@ -13,7 +13,6 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: #f5f5f5;
             font-family: Arial, sans-serif;
         }
 
@@ -24,6 +23,7 @@
             color: white;
             text-decoration: none;
             border-radius: 5px;
+            margin-top: 15px;
         }
     </style>
 </head>
