--- a/templates/read.html
+++ b/templates/read.html
@@ -13,11 +13,21 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: #f5f5f5;
             font-family: Arial, sans-serif;
         }
 
-        .btn {
+        .table-container {
+            margin-top: 20px;
+            width: 30%;
+            max-width: 600px;
+        }
+
+
+        .button-container a {
+            margin: 15px
+        }
+
+        .top-btn {
             display: inline-block;
             padding: 10px 20px;
             background-color: #000000;
@@ -26,11 +36,48 @@
             border-radius: 5px;
         }
     </style>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 
 <body>
-    <h3>This page will read all existing contacts</h3>
-    <a href="{{url_for('home')}}" class="btn">Home</a>
+    <h3>Your Contacts</h3>
+    <div class="button-container">
+        <a href="{{url_for('home')}}" class="top-btn">Home</a>
+        <a href="{{url_for('add_contact')}}" class="top-btn">Add</a>
+        <a href="{{url_for('update_contact')}}" class="top-btn">Update</a>
+        <a href="{{url_for('delete_contact')}}" class="top-btn">Delete</a>
+    </div>
+
+    <div class="table-container">
+        <table class="table table-bordered">
+            <thead>
+                {% if contacts %}
+                <tr>
+                    <th>#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Number</th>
+                </tr>
+            </thead>
+            <tbody>
+
+                {% for contact in contacts %}
+                <tr>
+                    <td>{{loop.index}}</td>
+                    <td>{{contact["name"]}}</td>
+                    <td>{{contact["no"]}}</td>
+                </tr>
+                {% endfor %}
+                {% else %}
+                <tr>
+                    <td colspan="3" class="text-center">There are no contacts</td>
+                </tr>
+
+            </tbody>
+            {% endif %}
+        </table>
+    </div>
 </body>
 
 </html>
