--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+
+
     <style>
         body {
             margin: 0;
@@ -12,8 +16,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
         }
+
+
 
         .container {
             text-align: center;
@@ -32,12 +38,20 @@
             text-decoration: none;
             border-radius: 5px;
         }
+
+        h1.page-heading {
+            font-family: 'Nunito', sans-serif;
+            font-size: 2.25rem;
+            font-weight: 700;
+            text-align: center;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>Contacts App</h1>
+        <h1 class="page-heading">Contacts App</h1>
         <div class="button-container">
             <a href="{{url_for('add_contact')}}" class="btn">Add</a>
             <a href="{{url_for('read_contacts')}}" class="btn">Read</a>
